# pal1-ram-rom

./: .gitignore  LICENSE  README.md  basic.pap  detailed_memory_map.md  dumptape.kim1
datasheets/: overclocking_pico.html  riot.vhd
datasheets/ROMs/: kim.lst  kim.map
datasheets/overclocking_pico_files/: a.html  colours_rpi.css  forum_fn.js  legacy.min.css  print.css  stylesheet.css
kicad/barebones/: barebones.kicad_pcb  barebones.kicad_prl  barebones.kicad_pro  barebones.kicad_sch  fp-info-cache  freerouting.dsn
kicad/level-shifted/: fp-info-cache  fp-lib-table  freerouting.dsn  level-shifted.kicad_pcb  level-shifted.kicad_prl  level-shifted.kicad_pro  level-shifted.kicad_sch  level-shifted.kicad_sch-bak  level-shifted.kicad_sch_old  sym-lib-table  temp-freerouting.dsn
kicad/mplex/: fp-lib-table  mplex.kicad_pcb  mplex.kicad_prl  mplex.kicad_pro  mplex.kicad_sch  mplex.kicad_sch-bak
kicad/pal1-pico-rom/: fp-info-cache  pal1-pico-rom.kicad_pcb  pal1-pico-rom.kicad_prl  pal1-pico-rom.kicad_pro  pal1-pico-rom.kicad_sch  pal1-pico-rom.kicad_sch-bak
ptp/: basic.ptp  makebinary.sh  ptp2bin
rom_images/: pal-eeprom-AT28C256.hex
rom_images_oldcode/: convert.py
romcap/: c.py  high.ptp  low.ptp  make_address_xlate.py  mine.ptp  romcap1.ptp
romram_images/: kimrom.ptp
src/: CMakeLists.txt  run-copy.sh
src/address_test/: raw_dump.ptp  validate2.py  validate_file.py
src/pal-expansion/: 6532_timer.c  6532_timer.h  CMakeLists.txt  clockspeed.h  commands.c  commands.h  crc16-small.h  data.c  ilink.c  rambuf.c  rambuf.h  riottest.c  rom.c  rom_ext.c  xmodem.c
(+83 files in other folders)
